contact.html 반응형 / topbanner, about - swiper 마크업

--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -16,10 +16,10 @@
       <div id="contents" class="page_host">
         <div class="host_wrap">
 
-          <!-- host_top -->
-          <div class="host_top">
-            <div class="host_top_img"></div>
-            <div class="host_tit_wrap">
+          <!-- banner_top_01 -->
+          <div class="banner_top_01">
+            <div class="banner_top_img"></div>
+            <div class="banner_top_tit_wrap">
               <div class="typ_sec typ_sec_02">
                 <h2>ABOUT THE HOST</h2>
                 <p class="heading_2 top_sub_01">Hey there, I’m Andrew Jonson and welcome to my Podcast</p>
@@ -31,7 +31,7 @@
               </div>
             </div>
           </div>
-          <!-- //host_top -->
+          <!-- //banner_top_01 -->
 
           <!-- mq_logo_list -->
           <!-- 221109 - mq_logo_list 자체 margin 확인 -->
