--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,25 @@
     
       <!-- contents -->
       <div id="contents" class="page_about">
+
+        <!-- banner_top -->
+        <div class="banner_top_01">
+          <div class="banner_top_img"></div>
+          <div class="banner_top_tit_wrap">
+            <div class="banner_top_tit">
+              <div class="typ_sec typ_sec_02">
+                <p class="heading_1 top_sub_01">About  Finsweet Podcast</p>
+                <p class="top_sub_txt_02">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua.
+                </p>
+                <a href="#none" class="btn_typ_01 btn_1">Subscribe Now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- banner_top -->
+
         <!-- our_team -->
         <div class="our_team">
           <div class="our_t_tit_wrap">
@@ -43,6 +62,104 @@
           </div>
         </div>
         <!-- //our_team -->
+
+        <div class="meet_our_team con-m">
+          <div class="meet_t">
+            <h3 class="heading_2">Meet Our Team</h3>
+            <!-- swiper -->
+            <div class="swiper meetTeamSwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="../../assets/images/contents/team_1.png" alt="out team Jerome Bell">
+                  <div class="meet_t_txt">
+                    <span class="name heading_2">Jerome Bell</span>
+                    <span class="job">Founder & CEO</span>
+                    <div class="socials">
+                      <ul class="socials_list">
+                        <li><a href="#none" class="ico_facebook_p"></a></li>
+                        <li><a href="#none" class="ico_twitter_p"></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../../assets/images/contents/team_2.png" alt="out team Robert Mill">
+                  <div class="meet_t_txt">
+                    <span class="name heading_2">Robert Mill</span>
+                    <span class="job">Cofounder</span>
+                    <div class="socials">
+                      <ul class="socials_list">
+                        <li><a href="#none" class="ico_facebook_p"></a></li>
+                        <li><a href="#none" class="ico_twitter_p"></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../../assets/images/contents/team_3.png" alt="out team Rehab Walls">
+                  <div class="meet_t_txt">
+                    <span class="name heading_2">Rehab Walls</span>
+                    <span class="job">Producer</span>
+                    <div class="socials">
+                      <ul class="socials_list">
+                        <li><a href="#none" class="ico_facebook_p"></a></li>
+                        <li><a href="#none" class="ico_twitter_p"></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../../assets/images/contents/team_4.png" alt="out team Steve Winston">
+                  <div class="meet_t_txt">
+                    <span class="name heading_2">Steve Winston</span>
+                    <span class="job">Editor</span>
+                    <div class="socials">
+                      <ul class="socials_list">
+                        <li><a href="#none" class="ico_facebook_p"></a></li>
+                        <li><a href="#none" class="ico_twitter_p"></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../../assets/images/contents/team_1.png" alt="out team Jerome Bell">
+                  <div class="meet_t_txt">
+                    <span class="name heading_2">Jerome Bell</span>
+                    <span class="job">Founder & CEO</span>
+                    <div class="socials">
+                      <ul class="socials_list">
+                        <li><a href="#none" class="ico_facebook_p"></a></li>
+                        <li><a href="#none" class="ico_twitter_p"></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../../assets/images/contents/team_2.png" alt="out team Robert Mill">
+                  <div class="meet_t_txt">
+                    <span class="name heading_2">Robert Mill</span>
+                    <span class="job">Cofounder</span>
+                    <div class="socials">
+                      <ul class="socials_list">
+                        <li><a href="#none" class="ico_facebook_p"></a></li>
+                        <li><a href="#none" class="ico_twitter_p"></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- pagination -->
+            <div class="team-pagination"></div>
+            <!-- //swiper -->
+          </div>
+        </div>
 
         <!-- our_sponsors -->
         <div class="our_sponsors">
