--- a/pages/contact.html
+++ b/pages/contact.html
@@ -76,6 +76,10 @@
   <!-- container -->
   <div class="container">
 
+      <!-- dark_mode -->
+      <input class="dark_mode" type="checkbox">
+      <!-- // dark_mode -->
+
       <!-- contents -->
       <div id="contents" class="page_contact">
 
@@ -126,7 +130,7 @@
 
               <div class="socials">
                 <h3>Socials</h3>
-                <ul>
+                <ul class="socials_list">
                   <li><a href="#none" class="ico_facebook_p"></a></li>
                   <li><a href="#none" class="ico_twitter_p"></a></li>
                   <li><a href="#none" class="ico_linkedIn_p"></a></li>
