공통사용 컴포넌트 작업완료

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -211,7 +211,7 @@
         </div>
 
         <div class="top_sec_wrap con_pd con-m page_blog"><!-- con-m빼고 가져가기 / page_blog페이지에 넣는 컴포넌트-->
-          <div class="top_img_wrap">
+          <div class="top_img_wrap reverse">
             <img src="../assets/images/contents/main_blog.png" alt="featured_img">
           </div>
           <div class="typ_sec typ_sec_01">
@@ -225,10 +225,53 @@
           </div>
         </div>
 
+        <div class="top_sec_wrap con-m sec_fir page_home">
+          <div class="top_img_wrap reverse">
+            <img src="../assets/images/contents/main_con_1.png" alt="podcast img">
+          </div>
+          <div class="typ_sec typ_sec_03">
+            <p class="heading_2 top_sub_01">A podcast for makers and entrepreneurs</p>
+            <p class="top_sub_txt_02">
+              Apparently we had reached a great height in the atmosphere,
+              for the sky was a dead black, and the stars had ceased to twinkle.
+            </p>
+          </div>
+        </div>
+
+        <div class="top_sec_wrap con-m sec_secon page_home">
+          <div class="top_img_wrap">
+            <img src="../assets/images/contents/main_con_1.png" alt="my origins img">
+            <button type="button" class="heading_2 bnt_video btn_1">350+ Videos</button>
+          </div>
+          <div class="typ_sec typ_sec_03">
+            <p class="heading_2 top_sub_01">My origins on <span>YouTube</span> in 2008</p>
+            <p class="top_sub_txt_02">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+              volutpat ut netus malesuada enim penatibus non aliquet.
+            </p>
+          </div>
+        </div>
+
+        <div class="top_sec_wrap con_pd con-m sec_thir page_host">
+          <div class="top_img_wrap reverse">
+            <img src="../assets/images/contents/big_dream.png" alt="big_dream img">
+          </div>
+          <div class="typ_sec typ_sec_03">
+            <p class="heading_2 top_sub_01">A small story about a big dream  —  </p>
+            <p class="top_sub_txt_02 sub_txt">
+              Apparently we had reached a great height in the atmosphere, for the
+              sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon
+            </p>
+            <p class="top_sub_txt_03 sub_txt">
+              Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and
+            </p>
+          </div>
+        </div>
+
         <div class="promo_only color_2">
           <h2 class="heading_1">single blog, single_podcast</h2>
         </div>
-
         <!-- producer_post -->
         <div class="producer_post">
 
@@ -239,7 +282,7 @@
               <p class="pro_po_con">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the
                 stars had ceased to twinkle. By the same illusion which lifts the horizon of the
                 sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the
-                middle of an immense dark sphere, whose upper half was strewn with silver. 
+                middle of an immense dark sphere, whose upper half was strewn with silver.
               </p>
             </div>
             <div class="pro_po_sub">
@@ -291,9 +334,54 @@
             </div>
           </div>
           <!-- //producer_post_wrap : 공통 -->
-      
+
         </div>
         <!-- //producer post -->
+
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">about</h2>
+        </div>
+        <div class="list_type custom_swiper con-m con_pd page_about">
+          <!-- typ_list_wrap -->
+          <div class="typ_list_wrap">
+            <ul class="custom_wrap">
+              <li>
+                <div class="my_review">
+                  <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
+                  <p class="heading_4">500+ Podcast</p>
+                </div>
+                <div class="heading_5 icon_desc">
+                  Apparently we had reached a great height in the atmosphere,
+                  for the sky was a dead black, and the stars had ceased to twinkle.
+                </div>
+              </li>
+              <li>
+                <div class="my_review">
+                  <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
+                  <p class="heading_4">24M Views</p>
+                </div>
+                <div class="heading_5 icon_desc">
+                  Apparently we had reached a great height in the atmosphere,
+                  for the sky was a dead black, and the stars had ceased to twinkle.
+                </div>
+              </li>
+              <li>
+                <div class="my_review">
+                  <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
+                  <p class="heading_4">600k Subs</p>
+                </div>
+                <div class="heading_5 icon_desc">
+                  Apparently we had reached a great height in the atmosphere,
+                  for the sky was a dead black, and the stars had ceased to twinkle.
+                </div>
+              </li>
+            </ul>
+          </div>
+          <!-- //typ_list_wrap -->
+          <!-- <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div> -->
+        </div>
 
 
         <!-- @@include ../page_include/footer_sponsors.html -->
