--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -98,8 +98,14 @@
 <div class="list_type list_typ_01 con_pd">
   <div class="typ_tit_wrap">
     <h2 class="heading_2">Recent Episodes</h2>
-    <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
-    <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
+    <p class="hide">Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+    <a href="#none" class="btn_typ_01 btn_1 btn_recent hide">See All Episodes</a>
+    <div class="category_podcasts">
+      <a href="#none" class="cate_pod on">All Podcasts</a>
+      <a href="#none" class="cate_pod">Startup</a>
+      <a href="#none" class="cate_pod">Marketing</a>
+      <a href="#none" class="cate_pod">Business</a>
+    </div>
   </div>
 
   <!-- typ_list_wrap -->
