공통 영역 수정 및 추가

--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -191,6 +191,7 @@
                     </ul>
                     <!-- //podcasts -->
 
+                    <!-- sns_list -->
                     <ul class="sns_list">
                       <div class="ico_big">
                         <a href="#none" class="facebook_b"></a>
@@ -203,10 +204,23 @@
                         <a href="#none" class="instagram_s"></a>
                       </div>
                     </ul>
+                    <!-- //sns_list -->
+
                   </div>
-                <!-- //components -->
+
+                <!-- socials -->
+                <div class="socials">
+                  <h3>Socials</h3>
+                  <ul class="socials_list">
+                    <li><a href="#none" class="ico_facebook_p"></a></li>
+                    <li><a href="#none" class="ico_twitter_p"></a></li>
+                    <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                  </ul>
+                </div>
+                <!-- //socials -->
 
             </div>
+            <!-- //components -->
         </div>
         <!-- //promo_con -->
 
