list type include 분리

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -164,6 +164,26 @@
           <h2 class="heading_1">list type 01</h2>
           <p class="heading_4">type : title 있는 list</p>
         </div>
+        <div class="typ_tit_wrap con_pd">
+          <h2 class="heading_2">Recent Episodes</h2>
+          <div class="type_01_sub">
+            <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+            <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
+          </div>
+        </div>
+        <!-- @@include ../page_include/layout_list_typ_01.html -->
+
+        <br>
+        <br>
+        <div class="typ_tit_wrap con_pd">
+          <h2 class="heading_2">Recent Episodes</h2>
+          <div class="category_podcasts">
+            <a href="#none" class="cate_pod on">All Podcasts</a>
+            <a href="#none" class="cate_pod">Startup</a>
+            <a href="#none" class="cate_pod">Marketing</a>
+            <a href="#none" class="cate_pod">Business</a>
+          </div>
+        </div>
         <!-- @@include ../page_include/layout_list_typ_01.html -->
 
         <div class="promo_only color_2">
@@ -396,7 +416,6 @@
           <!-- <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div> -->
         </div>
-
 
         <!-- @@include ../page_include/footer_sponsors.html -->
         <!-- //contents -->
