--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -234,7 +234,7 @@
         <div class="typ_tit_wrap con_pd">
           <h2 class="heading_2">Recent Episodes</h2>
           <div class="type_01_sub">
-            <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+            <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
             <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
           </div>
         </div>
@@ -280,7 +280,7 @@
 
         <br>
         <br>
-        <div class="typ_tit_wrap con_pd">
+        <div class="typ_tit_wrap con_pd con-m">
           <h2 class="heading_2">Recent Episodes</h2>
           <div class="category_podcasts">
             <a href="#none" class="cate_pod on">All Podcasts</a>
@@ -438,7 +438,7 @@
           </div>
         </div>
 
-        <div class="top_sec_wrap con-m sec_fir page_home">
+        <div class="top_sec_wrap con-m sec_fir page_home"> <!-- page_home 빼기 -->
           <div class="top_img_wrap reverse">
             <img src="../assets/images/contents/main_con_1.png" alt="podcast img">
           </div>
@@ -451,7 +451,7 @@
           </div>
         </div>
 
-        <div class="top_sec_wrap con-m sec_secon page_home">
+        <div class="top_sec_wrap con-m sec_secon page_home"> <!-- page_home 빼기 -->
           <div class="top_img_wrap">
             <img src="../assets/images/contents/main_con_1.png" alt="my origins img">
             <button type="button" class="heading_2 bnt_video btn_1">350+ Videos</button>
@@ -466,7 +466,7 @@
           </div>
         </div>
 
-        <div class="top_sec_wrap con_pd con-m sec_thir page_host">
+        <div class="top_sec_wrap con_pd con-m sec_thir page_host"> <!-- page_host 빼기 -->
           <div class="top_img_wrap reverse">
             <img src="../assets/images/contents/big_dream.png" alt="big_dream img">
           </div>
@@ -487,7 +487,6 @@
         </div>
         <!-- producer_post -->
         <div class="producer_post">
-
           <!-- producer_post_wrap : 공통 -->
           <div class="producer_post_wrap">
             <div class="pro_po_main">
@@ -547,7 +546,6 @@
             </div>
           </div>
           <!-- //producer_post_wrap : 공통 -->
-
         </div>
         <!-- //producer post -->
 
@@ -555,7 +553,7 @@
         <div class="promo_only color_2">
           <h2 class="heading_1">about</h2>
         </div>
-        <div class="list_type custom_swiper con-m con_pd page_about">
+        <div class="list_type custom_swiper con-m con_pd page_about"> <!-- page_about 빼기 -->
           <!-- typ_list_wrap -->
           <div class="typ_list_wrap">
             <ul class="custom_wrap">
