--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -4,12 +4,13 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <!-- @@include ../page_include/header.html -->
 
   <!-- container -->
   <div class="container">
 
       <!-- dark_mode -->
-      <input class="dark_mode" type="checkbox">
+      <!-- <input class="dark_mode" type="checkbox"> -->
       <!-- // dark_mode -->
 
       <!-- contents -->
@@ -34,8 +35,7 @@
           <!-- //banner_top_01 -->
 
           <!-- mq_logo_list -->
-          <!-- 221109 - mq_logo_list 자체 margin 확인 -->
-          <div class="mq_logo_list con-m">
+          <div class="mq_logo_list">
             <marquee scrollamount=10>
               <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
               <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
@@ -47,6 +47,21 @@
           <!-- //mq_logo_list -->
 
           <!-- big_dream -->
+          <div class="top_sec_wrap con_pd con-m sec_thir">
+            <div class="top_img_wrap reverse">
+              <img src="../assets/images/contents/big_dream.png" alt="big_dream img">
+            </div>
+            <div class="typ_sec typ_sec_03">
+              <p class="heading_2 top_sub_01">A small story about a big dream  —  </p>
+              <p class="top_sub_txt_02 sub_txt">
+                Apparently we had reached a great height in the atmosphere, for the
+                sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon
+              </p>
+              <p class="top_sub_txt_03 sub_txt">
+                Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and
+              </p>
+            </div>
+          </div>
           <!-- //big_dream -->
 
           <!-- origins -->
@@ -95,7 +110,7 @@
           <!-- //origins -->
 
           <!-- podcasts_n_view -->
-          <div class="podcasts_n_view_wrap">
+          <div class="podcasts_n_view_wrap con-m">
             <h2 class="blind">podcasts and views</h2>
             <div class="pod_vi">
               <ul>
@@ -107,14 +122,44 @@
             </div>
           </div>
           <!-- //podcasts_n_view -->
+
+          <!-- host middle banner -->
+          <div class="con-m">
+            <div class="layout_banner_wrap">
+              <div>
+                <p class="heading_1">Become The Hero Of Your Own Story</p>
+                <p class="heading_5 sub_txt">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                  volutpat ut netus malesuada enim penatibus non aliquet.
+                </p>
+                <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+              </div>
+            </div>
+          </div>
+          <!-- //host middle banner -->
+
+          <!-- recent_episodes -->
+          <div class="typ_tit_wrap con_pd con-m">
+            <h2 class="heading_2">Recent Episodes</h2>
+            <div class="type_01_sub">
+              <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+              <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
+            </div>
+          </div>
+          <!-- @@include ../page_include/layout_list_typ_01.html -->
+          <!-- //recent_episodes -->
         </div>
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
 
   </div>
   <!-- //container -->
 
+  <!-- @@include ../page_include/footer.html -->
 </div>
 <!-- //wrapper -->
 
 <!-- @@close -->
+
