--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -27,19 +27,33 @@
             </div>
           </div>
 
+          <!-- recent_episodes -->
+          <div class="typ_tit_wrap con_pd con-m">
+            <h2 class="heading_2">Recent Episodes</h2>
+            <div class="type_01_sub">
+              <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+              <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
+            </div>
+          </div>
           <!-- @@include ../page_include/layout_list_typ_01.html -->
+          <!-- //recent_episodes -->
 
-          <div class="all_podcasts con_pd con-m">
+          <!-- //all_podcasts -->
+          <div class="all_podcast con-m con_pd">
             <h3 class="heading_2">All Podcasts</h3>
             <!-- category podcasts -->
             <div class="category_podcasts">
-              <a href="#none" class="cate_pod on">All Podcasts</a>
-              <a href="#none" class="cate_pod">Startup</a>
-              <a href="#none" class="cate_pod">Marketing</a>
-              <a href="#none" class="cate_pod">Business</a>
+              <a href="#none" data-filter="*" class="cate_pod on">All Podcasts</a>
+              <a href="#none" data-filter="a" class="cate_pod">Startup</a>
+              <a href="#none" data-filter="b" class="cate_pod">Marketing</a>
+              <a href="#none" data-filter="c" class="cate_pod">Business</a>
             </div>
             <!-- //category podcasts -->
           </div>
+          <div class="data">
+            <!-- @@include ../page_include/layout_list_typ_01.html -->
+          </div>
+          <!-- //all_podcasts -->
 
         </div>
       </div>
@@ -52,3 +66,4 @@
 <!-- //wrapper -->
 
 <!-- @@close -->
+
