--- a/dev/page_include/footer_sponsors.html
+++ b/dev/page_include/footer_sponsors.html
@@ -1,5 +1,5 @@
 <!-- footer_sponsors -->
-<div class="con_pd con-m">
+<div class="footer_top con_pd">
   <div class="footer_sponsors">
     <h3 class="heading_2">Our Sponsors</h3>
     <div class="logoipsum">
