--- a/dev/page_include/layout_your_inbox.html
+++ b/dev/page_include/layout_your_inbox.html
@@ -1,5 +1,5 @@
 <!-- layout_your_inbox -->
-<div class="con_pd con-m">
+<div class="footer_top con_pd">
   <div class="inbox_wrap">
     <div class="inbox">
       <p class="heading_2">Receive new episodes in your inbox.</p>
@@ -11,4 +11,3 @@
   </div>
 </div>
 <!-- //layout_your_inbox -->
-
