--- a/dev/page_include/layout_list_typ_01.html
+++ b/dev/page_include/layout_list_typ_01.html
@@ -3,7 +3,7 @@
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
-      <li>
+      <li data-type="a">
         <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
@@ -12,7 +12,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="b">
         <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
@@ -21,7 +21,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="c">
         <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
@@ -35,4 +35,3 @@
   <!-- //typ_list_wrap -->
 </div>
 <!-- //list_typ_01 -->
-
