--- a/pages/home.html
+++ b/pages/home.html
@@ -82,7 +82,7 @@
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
-      <li>
+      <li data-type="a">
         <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
@@ -91,7 +91,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="b">
         <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
@@ -100,7 +100,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="c">
         <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
@@ -114,8 +114,6 @@
   <!-- //typ_list_wrap -->
 </div>
 <!-- //list_typ_01 -->
-
-
 
           <div class="typ_tit_wrap swiper-sec con_pd con-m">
             <h2 class="heading_2">What our listeners say</h2>
@@ -174,7 +172,7 @@
           </div>
 
 <!-- layout_your_inbox -->
-<div class="con_pd con-m">
+<div class="footer_top con_pd">
   <div class="inbox_wrap">
     <div class="inbox">
       <p class="heading_2">Receive new episodes in your inbox.</p>
@@ -186,8 +184,6 @@
   </div>
 </div>
 <!-- //layout_your_inbox -->
-
-
 
 <!-- list_typ_02 -->
 <div class="list_type list_typ_02 con_pd">
