--- a/pages/host.html
+++ b/pages/host.html
@@ -15,12 +15,69 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+<!-- header -->
+<header class="con_pd">
+    <h1>
+      <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </h1>
+
+    <!-- gnb -->
+    <nav>
+      <div class="gnb">
+        
+        <!-- mo_hamburger -->
+        <div class="mo_hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <!-- //mo_hamburger -->
+
+        <div class="bg_gray"></div>
+
+        <div class="sub_menu">
+          <ul class="menu">
+            <li><a href="Podcasts.html">Podcasts</a></li>
+            <li><a href="Host.html">Host</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+
+          <ul class="sns">
+            <li><a href="#none" class="facebook_b"></a></li>
+            <li><a href="#none" class="linkedIn_b"></a></li>
+            <li><a href="#none" class="instagram_b"></a></li>
+          </ul>
+        </div>
+        
+      </div>
+    </nav>
+    <!-- //gnb -->
+</header>
+<!-- //header -->
+
+<script>
+
+  const burger = document.querySelector('.mo_hamburger');
+  const sub = document.querySelector('.sub_menu');
+  const bgOn = document.querySelector('.bg_gray');
+
+  burger.addEventListener('click', () => {
+    burger.classList.toggle('toggle');
+    // 수정필요 .contents oh
+    sub.classList.toggle('mo_menu_on')
+    bgOn.classList.toggle('mo_bg_on')
+    document.body.classList.toggle('no_scroll')
+  })
+
+</script>
 
   <!-- container -->
   <div class="container">
 
       <!-- dark_mode -->
-      <input class="dark_mode" type="checkbox">
+      <!-- <input class="dark_mode" type="checkbox"> -->
       <!-- // dark_mode -->
 
       <!-- contents -->
@@ -45,8 +102,7 @@
           <!-- //banner_top_01 -->
 
           <!-- mq_logo_list -->
-          <!-- 221109 - mq_logo_list 자체 margin 확인 -->
-          <div class="mq_logo_list con-m">
+          <div class="mq_logo_list">
             <marquee scrollamount=10>
               <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
               <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
@@ -58,6 +114,21 @@
           <!-- //mq_logo_list -->
 
           <!-- big_dream -->
+          <div class="top_sec_wrap con_pd con-m sec_thir">
+            <div class="top_img_wrap reverse">
+              <img src="../assets/images/contents/big_dream.png" alt="big_dream img">
+            </div>
+            <div class="typ_sec typ_sec_03">
+              <p class="heading_2 top_sub_01">A small story about a big dream  —  </p>
+              <p class="top_sub_txt_02 sub_txt">
+                Apparently we had reached a great height in the atmosphere, for the
+                sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon
+              </p>
+              <p class="top_sub_txt_03 sub_txt">
+                Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and
+              </p>
+            </div>
+          </div>
           <!-- //big_dream -->
 
           <!-- origins -->
@@ -106,7 +177,7 @@
           <!-- //origins -->
 
           <!-- podcasts_n_view -->
-          <div class="podcasts_n_view_wrap">
+          <div class="podcasts_n_view_wrap con-m">
             <h2 class="blind">podcasts and views</h2>
             <div class="pod_vi">
               <ul>
@@ -118,13 +189,136 @@
             </div>
           </div>
           <!-- //podcasts_n_view -->
+
+          <!-- host middle banner -->
+          <div class="con-m">
+            <div class="layout_banner_wrap">
+              <div>
+                <p class="heading_1">Become The Hero Of Your Own Story</p>
+                <p class="heading_5 sub_txt">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                  volutpat ut netus malesuada enim penatibus non aliquet.
+                </p>
+                <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+              </div>
+            </div>
+          </div>
+          <!-- //host middle banner -->
+
+          <!-- recent_episodes -->
+          <div class="typ_tit_wrap con_pd con-m">
+            <h2 class="heading_2">Recent Episodes</h2>
+            <div class="type_01_sub">
+              <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+              <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
+            </div>
+          </div>
+<!-- list_typ_01 -->
+<div class="list_type list_typ_01 con_pd">
+  <!-- typ_list_wrap -->
+  <div class="typ_list_wrap">
+    <ul>
+      <li data-type="a">
+        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
+          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        </div>
+      </li>
+      <li data-type="b">
+        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
+          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        </div>
+      </li>
+      <li data-type="c">
+        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
+          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!-- //typ_list_wrap -->
+</div>
+<!-- //list_typ_01 -->
+          <!-- //recent_episodes -->
         </div>
       </div>
+<!-- footer_sponsors -->
+<div class="footer_top con_pd">
+  <div class="footer_sponsors">
+    <h3 class="heading_2">Our Sponsors</h3>
+    <div class="logoipsum">
+        <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+    </div>
+  </div>
+</div>
+<!-- //footer_sponsors -->
       <!-- //contents -->
 
   </div>
   <!-- //container -->
 
+<!-- footer -->
+<footer>
+  <!-- footer_con -->
+  <div class="footer_con">
+    <div class="logo_wrap">
+      <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+    </div>
+
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="#none">Contact</a></li>
+        <li><a href="#none">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="#none"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+    <!-- dark_mode -->
+    <input class="dark_mode" type="checkbox">
+    <!-- // dark_mode -->
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
+</footer>
+<!-- //footer -->
 </div>
 <!-- //wrapper -->
 
