--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -94,12 +94,20 @@
             </div>
           </div>
 
+          <!-- recent_episodes -->
+          <div class="typ_tit_wrap con_pd con-m">
+            <h2 class="heading_2">Recent Episodes</h2>
+            <div class="type_01_sub">
+              <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+              <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
+            </div>
+          </div>
 <!-- list_typ_01 -->
 <div class="list_type list_typ_01 con_pd">
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
-      <li>
+      <li data-type="a">
         <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
@@ -108,7 +116,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="b">
         <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
@@ -117,7 +125,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="c">
         <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
@@ -131,20 +139,60 @@
   <!-- //typ_list_wrap -->
 </div>
 <!-- //list_typ_01 -->
+          <!-- //recent_episodes -->
 
-
-
-          <div class="all_podcasts con_pd con-m">
+          <!-- //all_podcasts -->
+          <div class="all_podcast con-m con_pd">
             <h3 class="heading_2">All Podcasts</h3>
             <!-- category podcasts -->
             <div class="category_podcasts">
-              <a href="#none" class="cate_pod on">All Podcasts</a>
-              <a href="#none" class="cate_pod">Startup</a>
-              <a href="#none" class="cate_pod">Marketing</a>
-              <a href="#none" class="cate_pod">Business</a>
+              <a href="#none" data-filter="*" class="cate_pod on">All Podcasts</a>
+              <a href="#none" data-filter="a" class="cate_pod">Startup</a>
+              <a href="#none" data-filter="b" class="cate_pod">Marketing</a>
+              <a href="#none" data-filter="c" class="cate_pod">Business</a>
             </div>
             <!-- //category podcasts -->
           </div>
+          <div class="data">
+<!-- list_typ_01 -->
+<div class="list_type list_typ_01 con_pd">
+  <!-- typ_list_wrap -->
+  <div class="typ_list_wrap">
+    <ul>
+      <li data-type="a">
+        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
+          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        </div>
+      </li>
+      <li data-type="b">
+        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
+          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        </div>
+      </li>
+      <li data-type="c">
+        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
+          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!-- //typ_list_wrap -->
+</div>
+<!-- //list_typ_01 -->
+          </div>
+          <!-- //all_podcasts -->
 
         </div>
       </div>
