--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -243,7 +243,7 @@
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
-      <li>
+      <li data-type="a">
         <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
@@ -252,7 +252,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="b">
         <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
@@ -261,7 +261,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="c">
         <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
@@ -275,8 +275,6 @@
   <!-- //typ_list_wrap -->
 </div>
 <!-- //list_typ_01 -->
-
-
 
         <br>
         <br>
@@ -294,7 +292,7 @@
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
-      <li>
+      <li data-type="a">
         <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
@@ -303,7 +301,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="b">
         <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
@@ -312,7 +310,7 @@
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
-      <li>
+      <li data-type="c">
         <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
         <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
@@ -326,8 +324,6 @@
   <!-- //typ_list_wrap -->
 </div>
 <!-- //list_typ_01 -->
-
-
 
         <div class="promo_only color_2">
           <h2 class="heading_1">list type 02</h2>
@@ -595,7 +591,7 @@
         </div>
 
 <!-- footer_sponsors -->
-<div class="con_pd con-m">
+<div class="footer_top con_pd">
   <div class="footer_sponsors">
     <h3 class="heading_2">Our Sponsors</h3>
     <div class="logoipsum">
