--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -4,12 +4,13 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <!-- @@include ../page_include/header.html -->
 
   <!-- container -->
   <div class="container">
 
     <!-- dark_mode -->
-    <input class="dark_mode" type="checkbox">
+    <!-- <input class="dark_mode" type="checkbox"> -->
     <!-- // dark_mode -->
     
       <!-- contents -->
@@ -171,12 +172,25 @@
           </div>
         </div>
         <!-- //our_sponsors -->
+
+        <!-- recent_episodes -->
+        <div class="typ_tit_wrap con_pd con-m">
+          <h2 class="heading_2">Recent Episodes</h2>
+          <div class="type_01_sub">
+            <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+          </div>
+        </div>
+        <!-- @@include ../page_include/layout_list_typ_01.html -->
+        <!-- //recent_episodes -->
+
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
 
   </div>
   <!-- //container -->
 
+  <!-- @@include ../page_include/footer.html -->
 </div>
 <!-- //wrapper -->
 
