--- a/dev/page_dev/single_podcast.html
+++ b/dev/page_dev/single_podcast.html
@@ -80,7 +80,7 @@
             <div class="pro_po_profile">
               <div class="pro_po_profile_wrap">
                 <div class="pro_info">
-                  <img src="../../assets/images/contents/profile_s_1.png" alt="eve madien profile">
+                  <img src="../assets/images/contents/profile_s_1.png" alt="eve madien profile">
                   <span class="name">Eve Madien</span>
                   <span class="job">Producer & Art Director</span>
                   <div class="sns">
