--- a/pages/about.html
+++ b/pages/about.html
@@ -127,7 +127,7 @@
             <div class="swiper meetTeamSwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_1.png" alt="out team Jerome Bell">
+                  <img src="../assets/images/contents/team_1.png" alt="out team Jerome Bell">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Jerome Bell</span>
                     <span class="job">Founder & CEO</span>
@@ -141,7 +141,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_2.png" alt="out team Robert Mill">
+                  <img src="../assets/images/contents/team_2.png" alt="out team Robert Mill">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Robert Mill</span>
                     <span class="job">Cofounder</span>
@@ -155,7 +155,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_3.png" alt="out team Rehab Walls">
+                  <img src="../assets/images/contents/team_3.png" alt="out team Rehab Walls">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Rehab Walls</span>
                     <span class="job">Producer</span>
@@ -169,7 +169,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_4.png" alt="out team Steve Winston">
+                  <img src="../assets/images/contents/team_4.png" alt="out team Steve Winston">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Steve Winston</span>
                     <span class="job">Editor</span>
@@ -183,7 +183,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_1.png" alt="out team Jerome Bell">
+                  <img src="../assets/images/contents/team_1.png" alt="out team Jerome Bell">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Jerome Bell</span>
                     <span class="job">Founder & CEO</span>
@@ -197,7 +197,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_2.png" alt="out team Robert Mill">
+                  <img src="../assets/images/contents/team_2.png" alt="out team Robert Mill">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Robert Mill</span>
                     <span class="job">Cofounder</span>
