--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -60,7 +60,7 @@
             <div class="swiper meetTeamSwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_1.png" alt="out team Jerome Bell">
+                  <img src="../assets/images/contents/team_1.png" alt="out team Jerome Bell">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Jerome Bell</span>
                     <span class="job">Founder & CEO</span>
@@ -74,7 +74,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_2.png" alt="out team Robert Mill">
+                  <img src="../assets/images/contents/team_2.png" alt="out team Robert Mill">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Robert Mill</span>
                     <span class="job">Cofounder</span>
@@ -88,7 +88,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_3.png" alt="out team Rehab Walls">
+                  <img src="../assets/images/contents/team_3.png" alt="out team Rehab Walls">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Rehab Walls</span>
                     <span class="job">Producer</span>
@@ -102,7 +102,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_4.png" alt="out team Steve Winston">
+                  <img src="../assets/images/contents/team_4.png" alt="out team Steve Winston">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Steve Winston</span>
                     <span class="job">Editor</span>
@@ -116,7 +116,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_1.png" alt="out team Jerome Bell">
+                  <img src="../assets/images/contents/team_1.png" alt="out team Jerome Bell">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Jerome Bell</span>
                     <span class="job">Founder & CEO</span>
@@ -130,7 +130,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../assets/images/contents/team_2.png" alt="out team Robert Mill">
+                  <img src="../assets/images/contents/team_2.png" alt="out team Robert Mill">
                   <div class="meet_t_txt">
                     <span class="name heading_2">Robert Mill</span>
                     <span class="job">Cofounder</span>
